sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:15: error: ';' expected but '.' found.
    ecart=(ecart.toDouble /2)to.Int;  
                               ^